test: gatling 설정 및 시물레이션 추가